# Exercise

./: .gitignore  3DScan_Qt.pro  CMakeLists.txt  Doxyfile  Fragment.shader  KDTree.cpp  KDTree.h  OpenGL_Application.sln  OpenGL_Application.vcxproj  OpenGL_Application.vcxproj.filters  README.md  Shader.h  Vertex.shader
data/: bestfitsphere.m  cap.xyz  cone.xyz  line.xyz  plane.xyz  plane2.xyz  sphere.xyz  sphere2.xyz  sphere_fit.m  test.xyz
include/: Algorithms.h  GLcamera.h  GLwidget.h  KDTree.h  MainWindow.h  Matrix.h  Point3d.h  SVD.h  Shader.h
source/: Algorithms.cpp  GLcamera.cpp  GLwidget.cpp  KDTree.cpp  MainWindow.cpp  OpenGL_Application.cpp  Point3d.cpp  SVD.cpp  Shader.cpp
